# agent-remote

./: .env.example  .gitignore  CLAUDE.md  LARK_CLIENT_GUIDE.md  README.md  agent_remote.py  agents-remote-architecture.html  init.sh  package.json  pyproject.toml  requirements.txt  send_lark_msg.py  test_lark_management.sh
.github/workflows/: publish.yml
client/: __init__.py  client.py
docker/: README.md  docker-compose.test.yml
docker/scripts/: docker-diagnose.sh  docker-test.sh
lark_client/: __init__.py  capture_output.py  card_builder.py  config.py  lark_handler.py  main.py  session_bridge.py  setup_wizard.py  shared_memory_poller.py
scripts/: check-env.sh  completion.sh  ensure-uv.sh  npm-publish.sh  postinstall.sh  preinstall.sh  report_install.py
server/: __init__.py  component_parser.py  rich_text_renderer.py  server.py  shared_state.py
server/parsers/: claude_parser.py
stats/: __init__.py  collector.py  machine.py  query.py
tests/: test_attach_dedup.py  test_codex_parser_utils.py  test_codex_split_regions.py  test_component_parser.py  test_integration.py  test_message_queue.py  test_mock_conversation.py  test_renderer.py  test_stats.py  test_stream_poller.py
tools/: replay_pty.py
utils/: __init__.py  picker.py  session.py  session_id_map.py  shared_state_reader.py
