[project]
name = "agents-remote"
version = "1.0.11"
description = "Agent Remote — share a Claude / Codex CLI session between local terminal and Feishu cards (formerly remote_claude)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "xluos" }]
dependencies = [
    "lark-oapi>=1.4.24",
    "python-dotenv>=1.0.0",
    "pyte>=0.8.0",
    "mixpanel>=5.0.0",
    "python-socks[asyncio]>=2.0.0",
]

[project.scripts]
agents-remote = "agent_remote:main"
agent-remote = "agent_remote:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server", "client", "lark_client", "utils", "stats"]
sources = ["."]

[tool.hatch.build.targets.wheel.force-include]
"agent_remote.py" = "agent_remote.py"
